--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
     <script type="module" src="index.js"></script>
     <title>Grafy</title>
 </head>
 <body>
+    <h1>🎓 Počet studentů na univerzitách v ČR</h1>
     <svg id="bubble-chart">
         <defs>
             <linearGradient id="privateGradient" x2="0.35" y2="1">
@@ -22,9 +26,9 @@
               </linearGradient>
           </defs>
         <div class="tooltip">
-            <img alt="" />
+            <h2></h2>
             <div>
-                <a></a>
+                <b>Počet studentů:</b>
                 <span></span>
             </div>
         </div>
